[package]
name = 'polket-runtime'
version = '0.1.0'
description = 'A fresh FRAME-based Substrate runtime, ready for hacking.'
authors = ['Polket <https://www.polket.io>']
homepage = 'https://www.polket.io'
edition = '2018'
license = "GPL-3.0-or-later"
publish = false
repository = 'https://github.com/polket/polket/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-11', version = '5.0.0-dev' }

[dependencies]

hex-literal = { optional = true, version = '0.3.1' }
scale-info = { default-features = false, features = ['derive'], version = '1.0' }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
smallvec = "1.6.1"

frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', default-features = false, optional = true, tag = 'monthly-2021-11', version = '4.0.0-dev' }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate.git', default-features = false, optional = true, tag = 'monthly-2021-11', version = '4.0.0-dev' }
frame-executive = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
frame-support = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
frame-system = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-grandpa = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-sudo = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-assets = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-uniques = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-api = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-offchain = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-identity = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-session = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-std = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-version = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-babe = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '0.10.0-dev' }
pallet-session = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev', features = ["historical"] }
pallet-staking = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-staking-reward-curve = { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-staking = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
frame-election-provider-support = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-utility = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-treasury = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-membership = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-collective = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-multisig = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }

# local libraries
polket-primitives = { default-features = false, path = '../../primitives' }
pallet-template = {default-features = false, path = '../../pallets/template', version = '0.1.0'}
pallet-identity-extra = {default-features = false, path = '../../pallets/identity-extra', version = '0.1.0'}
pallet-support = {default-features = false, path = '../../pallets/support', version = '0.1.0'}
pallet-unique-id = {default-features = false, path = '../../pallets/unique-id', version = '0.1.0'}
pallet-currencies = {default-features = false, path = '../../pallets/currencies', version = '0.1.0'}
pallet-buyback = {default-features = false, path = '../../pallets/buyback', version = '0.1.0'}
pallet-vfe = {default-features = false, path = '../../pallets/vfe', version = '0.1.0'}

runtime-common = {default-features = false, path = '../common', version = '0.1.0'}

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-template/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'scale-info/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-babe/std',
    'sp-consensus-babe/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-template/std',
    'pallet-assets/std',
    'pallet-uniques/std',
    'pallet-identity/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'runtime-common/std',
    'pallet-support/std',
    'pallet-vfe/std',
	'pallet-identity-extra/std',
    'pallet-unique-id/std',
    'pallet-session/std',
    'pallet-staking/std',
    'sp-staking/std',
    'frame-election-provider-support/std',
    'pallet-utility/std',
    'pallet-treasury/std',
    'pallet-membership/std',
    'pallet-collective/std',
    'pallet-multisig/std',
    'pallet-buyback/std',
]
